<resources>
    <string name="app_name">PasswordManagementApp</string>
    <string name="app_title_text">パスワード管理アプリ</string>
    <string name="app_description">※アイテムを追加する場合は下記「アイテムを追加」ボタン\nをタップしてください。</string>
    <string name="add_item">アイテムを追加</string>
    <string name="change_name_text">アイテム名変更</string>
    <string name="change_id_text">ID変更</string>
    <string name="change_password_text">パスワード変更</string>
    <string name="item_delete_text">アイテム削除</string>
    <string name="change_color_text">色の変更</string>
    <string name="confirm_text">確定</string>
    <string name="item_name_title_text">アイテム名</string>
    <string name="item_name_title_hint">アイテム</string>
    <string name="item_name_id_text">ID</string>
    <string name="item_name_id_hint">ID</string>
    <string name="item_name_password_text">パスワード</string>
    <string name="item_name_password_hint">パスワード</string>
    <string name="coron">:</string>
    <string name="app_description_2">アイテム右上の▽ボタンから\nアイテム名、ID、パスワードを入力し、\n確定を押してください。</string>
    <string name="copy_text">コピー</string>



</resources>
