<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    app:layoutDescription="@xml/bkup"
    tools:context=".ui.MainFragment">

    <LinearLayout
        android:id="@+id/motion_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/app_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/app_title_text"
            android:textColor="@color/black"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/app_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/app_description"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <Button
            android:id="@+id/add_item_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="100dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/add_item"
            app:background="@drawable/button_layout"
            app:backgroundTint="#4ADACC" />

        <ScrollView
            android:id="@+id/list_scroll_area"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            >

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false" />

        </ScrollView>

    </LinearLayout>
</androidx.constraintlayout.motion.widget.MotionLayout>
