<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_frame"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:layout_marginHorizontal="10dp"
    android:layout_marginBottom="10dp"
    android:background="@drawable/item_background">

    <EditText
        android:id="@+id/item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="名前"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@android:drawable/ic_menu_more"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/option_area"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/icon"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/change_name_text"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/menu_text_back"
            android:gravity="center_vertical"
            android:text="@string/change_name_text"
            android:textSize="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/change_password_text"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/menu_text_back"
            android:gravity="center_vertical"
            android:text="@string/change_password_text"
            android:textSize="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/change_name_text" />

        <TextView
            android:id="@+id/item_delete_text"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/menu_text_back"
            android:gravity="center_vertical"
            android:text="@string/item_delete_text"
            android:textSize="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/change_password_text" />

        <TextView
            android:id="@+id/change_color_text"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/menu_text_back"
            android:gravity="center_vertical"
            android:text="@string/change_color_text"
            android:textSize="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_delete_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
